# labelr-rs

./: Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-rust.yml
src/: cli.rs  git.rs  label.rs  lib.rs  main.rs
