[package]
name = "labelr"
version = "0.1.1"
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]
edition = "2021"
description = "Manage GitHub labels efficiently"
readme = "README.md"

[lib]
name = "labelr"
path = "src/lib.rs"

[[bin]]
name = "labelr"
path = "src/main.rs"


[dependencies]
clap = { version = "4.1.11", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.0"
eyre = "0.6.6"
futures = "0.3.27"
git-url-parse = "0.4.0"
git2 = "0.17.1"
hubcaps = { git = "https://github.com/softprops/hubcaps", branch = "master" }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.17"


[dev-dependencies]
tempfile = "3.5.0"
