[package]
name = "labelr"
version = "0.1.1"
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]
edition = "2021"
description = "Manage GitHub labels efficiently"
readme = "README.md"

[lib]
name = "labelr"
path = "src/lib.rs"

[[bin]]
name = "labelr"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.30"
git-url-parse = "0.4.0"
git2 = "0.18.2"
hubcaps = { git = "https://github.com/softprops/hubcaps", branch = "master" }
serde = { version = "1.0.171", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[dev-dependencies]
tempfile = "3.10.1"
